Admin Ordered Refactored

--- a/src/app/admin/orders/order-details-dialog/order-details-dialog.html
+++ b/src/app/admin/orders/order-details-dialog/order-details-dialog.html
@@ -6,13 +6,13 @@
       <h6 class="font-weight-bold">Order #</h6>
       <small>{{ order?.orderId }}</small>
       <h6 class="font-weight-bold mt-3">Ordered on</h6>
-      <small>{{ order?.OrderDate }}</small>
-      <h6 class="font-weight-bold mt-3">Pickup Date</h6>
-      <small>{{ order?.DeliveredDate }}</small>
+      <small>{{ order?.OrderDate | date }}</small>
+      <h6 class="font-weight-bold mt-3">Delivered Date</h6>
+      <small>{{ order?.DeliveredDate| date }}</small>
       <h6 class="font-weight-bold mt-3">Pickup Slot</h6>
-      <small>{{ order?.PickUpSlot }}</small>
+      <small>{{ order?.PickUpSlot | date: 'MMM d, y, h:mm:ss a'}}</small>
       <h6 class="font-weight-bold mt-3">Order Status</h6>
-      <mat-form-field fxFlex.lt-sm="100%">
+      <mat-form-field fxFlex.lt-sm="100%" style="width: inherit;">
         <mat-select [formControl]="orderStatusControl" (selectionChange)="changeOrderStatus($event)">
           <mat-option value="placed">Placed</mat-option>
           <mat-option value="rejected">Rejected</mat-option>
@@ -27,13 +27,13 @@
       <div style="width: inherit;">
         <h6 class="mb-4 font-weight-bold">Items</h6>
         <div class="card mat-elevation-z2 mb-4 flex-row" *ngFor="let orderItem of order?.item">
-          <img class="order-item-img" src="./../../../assets/media/product-item.png" alt="product image" />
+          <img class="order-item-img" src="{{ orderItem?.imagePath | async }}" alt="product image" />
           <div class="content-center">
             <div class="pl-3 pr-3">
               <div style="float: left;">{{ orderItem.name }}</div>
               <div style="float: right;">X {{ orderItem?.quantity }}</div>
             </div>
-            <small class="pl-3">{{ orderItem?.CategoryName }}</small>
+            <small class="pl-1">({{ orderItem?.CategoryName }})</small>
           </div>
         </div>
       </div>
