--- a/src/app/admin/products/products.component.html
+++ b/src/app/admin/products/products.component.html
@@ -1,55 +1,60 @@
 <div class="container-fluid mat-elevation-z8">
-  <div class="table-responsive d-flex flex-column mt-2">
-    <table mat-table [dataSource]="dataSource" matSort>
-      <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Product ID</th>
-        <td mat-cell *matCellDef="let product">
-          {{ product.id }}
-        </td>
-      </ng-container>
-      <!-- Position Column -->
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
-        <td mat-cell *matCellDef="let product">
-          {{ product.name }}
-        </td>
-      </ng-container>
+  <mat-tab-group mat-align-tabs="center">
+    <mat-tab label="Products">
+      <div class="table-responsive d-flex flex-column mt-2">
+        <table mat-table [dataSource]="dataSource" matSort class="w-100">
+          <ng-container matColumnDef="id">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Product ID</th>
+            <td mat-cell *matCellDef="let product">
+              {{ product.id }}
+            </td>
+          </ng-container>
+          <!-- Position Column -->
+          <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
+            <td mat-cell *matCellDef="let product">
+              {{ product.name }}
+            </td>
+          </ng-container>
 
-      <!-- Name Column -->
-      <ng-container matColumnDef="category">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Category</th>
-        <td mat-cell *matCellDef="let product">
-          {{ product.category.name }}
-        </td>
-      </ng-container>
+          <!-- Name Column -->
+          <ng-container matColumnDef="category">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Category</th>
+            <td mat-cell *matCellDef="let product">
+              {{ product.category.name }}
+            </td>
+          </ng-container>
 
-      <!-- Weight Column -->
-      <ng-container matColumnDef="availableQuantity">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Total</th>
-        <td mat-cell *matCellDef="let product">
-          {{ product.availableQuantity }}
-        </td>
-      </ng-container>
+          <!-- Weight Column -->
+          <ng-container matColumnDef="availableQuantity">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Total</th>
+            <td mat-cell *matCellDef="let product">
+              {{ product.availableQuantity }}
+            </td>
+          </ng-container>
 
-      <!-- Symbol Column -->
-      <ng-container matColumnDef="limit">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Limit</th>
-        <td mat-cell *matCellDef="let product">
-          {{ product.limit }}
-        </td>
-      </ng-container>
+          <!-- Symbol Column -->
+          <ng-container matColumnDef="limit">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Limit</th>
+            <td mat-cell *matCellDef="let product">
+              {{ product.limit }}
+            </td>
+          </ng-container>
 
-      <ng-container matColumnDef="delete">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Action</th>
-        <td mat-cell *matCellDef="let product">
-          <button mat-raised-button class="app-primary-btn" (click)="edit(product)">Edit</button>
-          <button mat-raised-button class="app-primary-btn" (click)="delete(product)">Delete</button>
-        </td>
-      </ng-container>
+          <ng-container matColumnDef="delete">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Action</th>
+            <td mat-cell *matCellDef="let product">
+              <button mat-raised-button class="app-primary-btn" (click)="edit(product)">Edit</button>
+              <button mat-raised-button class="app-primary-btn" (click)="delete(product)">Delete</button>
+            </td>
+          </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-    </table>
-    <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
-  </div>
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+        </table>
+        <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+      </div>
+    </mat-tab>
+    <mat-tab label="Categories">Categories</mat-tab>
+  </mat-tab-group>
 </div>
