--- a/src/app/admin/products/products.component.html
+++ b/src/app/admin/products/products.component.html
@@ -2,6 +2,9 @@
   <mat-tab-group mat-align-tabs="center">
     <mat-tab label="Products">
       <div class="table-responsive d-flex flex-column mt-2">
+        <button class="app-primary-btn" (click)="openAddDialog()" style="margin: auto;" mat-button>
+          Add New Product
+        </button>
         <table mat-table [dataSource]="dataSource" matSort class="w-100">
           <ng-container matColumnDef="id">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Product ID</th>
@@ -44,7 +47,7 @@
           <ng-container matColumnDef="delete">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Action</th>
             <td mat-cell *matCellDef="let product">
-              <button mat-raised-button class="app-primary-btn" (click)="edit(product)">Edit</button>
+              <button mat-raised-button class="app-primary-btn" (click)="edit(product.id)">Edit</button>
               <button mat-raised-button class="app-primary-btn" (click)="delete(product)">Delete</button>
             </td>
           </ng-container>
@@ -52,9 +55,38 @@
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
           <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
         </table>
-        <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+        <mat-paginator #productsPaginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
       </div>
     </mat-tab>
-    <mat-tab label="Categories">Categories</mat-tab>
+    <mat-tab label="Categories">
+      <div class="table-responsive d-flex flex-column mt-2">
+        <table mat-table [dataSource]="categorySource" matSort #categorySort class="w-100">
+          <ng-container matColumnDef="id">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
+            <td mat-cell *matCellDef="let category">
+              {{ category.id }}
+            </td>
+          </ng-container>
+          <!-- Position Column -->
+          <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
+            <td mat-cell *matCellDef="let category">
+              {{ category.name }}
+            </td>
+          </ng-container>
+
+          <ng-container matColumnDef="edit">
+            <th mat-header-cell *matHeaderCellDef>Action</th>
+            <td mat-cell *matCellDef="let category">
+              <button mat-raised-button class="app-primary-btn" (click)="edit(category)">Edit</button>
+            </td>
+          </ng-container>
+
+          <tr mat-header-row *matHeaderRowDef="categoryColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: categoryColumns"></tr>
+        </table>
+        <mat-paginator #categoryPaginator [pageSizeOptions]="[5, 10, 15]" showFirstLastButtons></mat-paginator>
+      </div>
+    </mat-tab>
   </mat-tab-group>
 </div>
