--- a/src/app/admin/products/products.component.html
+++ b/src/app/admin/products/products.component.html
@@ -48,7 +48,7 @@
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Action</th>
             <td mat-cell *matCellDef="let product">
               <button mat-raised-button class="app-primary-btn" (click)="edit(product.id)">Edit</button>
-              <button mat-raised-button class="app-primary-btn" (click)="delete(product)">Delete</button>
+              <button mat-raised-button class="app-primary-btn" (click)="delete(product.id)">Delete</button>
             </td>
           </ng-container>
 
@@ -60,6 +60,26 @@
     </mat-tab>
     <mat-tab label="Categories">
       <div class="table-responsive d-flex flex-column mt-2">
+        <div class="container mt-5 mb-5">
+          <div class="row">
+            <div class="col-md-4">
+              <form class="col-lg-9 col-md-12" [formGroup]="CategoryFormGroup">
+                <mat-form-field hidden>
+                  <input matInput type="number" [formControl]="id" />
+                </mat-form-field>
+                <mat-form-field>
+                  <input matInput type="text" placeholder="Name" autocomplete="off" [formControl]="name" required />
+                  <mat-error *ngIf="name.hasError('required')">
+                    Please Enter Category Name
+                  </mat-error>
+                </mat-form-field>
+                <button class="app-primary-btn" (click)="updateCategory()" style="margin: auto;" mat-button>
+                  {{ buttonName }}
+                </button>
+              </form>
+            </div>
+          </div>
+        </div>
         <table mat-table [dataSource]="categorySource" matSort #categorySort class="w-100">
           <ng-container matColumnDef="id">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
@@ -78,7 +98,7 @@
           <ng-container matColumnDef="edit">
             <th mat-header-cell *matHeaderCellDef>Action</th>
             <td mat-cell *matCellDef="let category">
-              <button mat-raised-button class="app-primary-btn" (click)="edit(category)">Edit</button>
+              <button mat-raised-button class="app-primary-btn" (click)="editCategory(category)">Edit</button>
             </td>
           </ng-container>
 
