--- a/src/app/admin/products/add-edit-product-dialog/add-edit-product.dialog.html
+++ b/src/app/admin/products/add-edit-product-dialog/add-edit-product.dialog.html
@@ -4,7 +4,18 @@
 <section class="container product-detail mt-5 mb-5">
   <div class="row">
     <div class="col-md-6">
-      <img src="{{ product?.imagePath | async }}" class="product-detail-img" />
+      <img src="{{ imageUrl }}" class="product-detail-img" />
+      <input hidden #imageInput type="file" accept="image/*" (change)="preview($event)" />
+
+      <div class="row mt-3 mb-3" style="width: max-content; margin: auto;">
+        <button class="app-primary-btn m-1" (click)="imageInput.click()" mat-button>Select</button>
+        <button class="app-primary-btn m-1" (click)="imageFile=null; imageUrl=''; saveButtonStatus=true;" mat-button>
+          Remove
+        </button>
+        <button class="app-primary-btn m-1" (click)="saveImage()" [disabled]="!saveButtonStatus" mat-button>
+          Save
+        </button>
+      </div>
     </div>
     <div class="col-md-6">
       <form class="col-lg-9 col-md-12" [formGroup]="productFormGroup">
