Product module refactored

--- a/src/app/admin/orders/order-details-dialog/order-details-dialog.html
+++ b/src/app/admin/orders/order-details-dialog/order-details-dialog.html
@@ -39,5 +39,8 @@
       </div>
     </div>
   </div>
+  <div class="w-30" mat-dialog-actions>
+    <button class="app-primary-btn" style="margin: auto;" mat-button mat-dialog-close>CLOSE</button>
+  </div>
 </section>
 <app-loader [isLoading]="isLoading" [size]="5"></app-loader>
