--- a/src/app/admin/products/add-edit-product-dialog/add-edit-product.dialog.html
+++ b/src/app/admin/products/add-edit-product-dialog/add-edit-product.dialog.html
@@ -9,10 +9,21 @@
 
       <div class="row mt-3 mb-3" style="width: max-content; margin: auto;">
         <button class="app-primary-btn m-1" (click)="imageInput.click()" mat-button>Select</button>
-        <button class="app-primary-btn m-1" (click)="imageFile=null; imageUrl=''; saveButtonStatus=true;" mat-button>
+        <button
+          class="app-primary-btn m-1"
+          [hidden]="data==null"
+          (click)="imageFile=null; imageUrl=''; saveButtonStatus=true;"
+          mat-button
+        >
           Remove
         </button>
-        <button class="app-primary-btn m-1" (click)="saveImage()" [disabled]="!saveButtonStatus" mat-button>
+        <button
+          class="app-primary-btn m-1"
+          (click)="saveImage(product.id)"
+          [hidden]="data==null"
+          [disabled]="!saveButtonStatus"
+          mat-button
+        >
           Save
         </button>
       </div>
