--- a/src/app/admin/products/add-edit-product-dialog/add-edit-product.dialog.scss
+++ b/src/app/admin/products/add-edit-product-dialog/add-edit-product.dialog.scss
@@ -4,6 +4,7 @@
   &-img {
     width: 100%;
     min-height: 250px;
+    max-height: 60vh;
     display: block;
     background-color: #e5e5e5;
     object-fit: cover;
