--- a/src/app/admin/products/products.component.html
+++ b/src/app/admin/products/products.component.html
@@ -98,7 +98,7 @@
             </button>
           </form>
         </div>
-        <table mat-table [dataSource]="categorySource" matSort #categorySort class="w-100">
+        <table mat-table [dataSource]="categorySource" matSort #categorySort="matSort" class="w-100">
           <ng-container matColumnDef="id">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
             <td mat-cell *matCellDef="let category">
