--- a/src/app/@shared/footer/footer.component.html
+++ b/src/app/@shared/footer/footer.component.html
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <div class="row pt-3">
       <div class="col-md-12 text-center text-white p-2">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+        Dalhousie Student Union, 6136 University Avenue, Halifax, NS, B3H, Canada | +1 (902)-494-2140
       </div>
       <div class="col-md-12 p-2 f-primary-nav">
         <ul class="nav flex-md-row justify-content-center align-content-center flex-column">
