--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,4 +1,82 @@
-<section class="mt-5">
-  <h1>Contact Us</h1>
-  <a [routerLink]="'special-item'">Special Item Request</a>
-</section>
+<!-- <section class="mt-5">
+    <h1>Contact Us</h1>
+    <a [routerLink]="'special-item'">Special Item Request</a>
+  </section> -->
+<div class="container-fluid">
+  <div class="row justify-content-center">
+    <div class="col-md-5 col-sm-12 d-flex flex-column justify-content-center">
+      <mat-card class="contact-card mt-4 mb-4 mat-elevation-z16">
+        <mat-card-header class="p-4">
+          <mat-card-title>{{ 'Contact Us' | uppercase }}</mat-card-title>
+        </mat-card-header>
+        <mat-divider></mat-divider>
+        <mat-card-content class="p-4 pt-4 pb-4">
+          <form
+            class="col-lg-9 col-md-12 app-form"
+            autocomplete="off"
+            [formGroup]="contactUsForm"
+            (ngSubmit)="submit()"
+          >
+            <mat-form-field class="w-100">
+              <mat-label>Dalhousie Banner ID</mat-label>
+              <input
+                matInput
+                type="text"
+                placeholder="Enter Banner ID"
+                [formControl]="bannerId"
+                autocomplete="off"
+                required
+              />
+            </mat-form-field>
+            <mat-form-field class="w-100">
+              <mat-label>First Name</mat-label>
+              <input
+                matInput
+                type="text"
+                placeholder="Enter First Name"
+                [formControl]="firstName"
+                autocomplete="off"
+                required
+              />
+              <mat-error *ngIf="firstName.hasError('required')">Please enter your firstname.</mat-error>
+            </mat-form-field>
+            <mat-form-field class="w-100">
+              <mat-label>Email Address</mat-label>
+              <input
+                matInput
+                type="email"
+                placeholder="Enter email address"
+                [formControl]="email"
+                autocomplete="off"
+                required
+              />
+              <mat-error *ngIf="email.hasError('required') && !email.hasError('email')"
+                >Please enter your email address.</mat-error
+              >
+              <mat-error *ngIf="!email.hasError('required') && email.hasError('email')"
+                >Please enter a valid email address.</mat-error
+              >
+            </mat-form-field>
+            <mat-form-field class="w-100">
+              <mat-label>Your Message</mat-label>
+              <textarea
+                matInput
+                type="text"
+                placeholder="Enter Last Name"
+                [formControl]="message"
+                autocomplete="off"
+                required
+              ></textarea>
+              <mat-error *ngIf="message.hasError('required')">Please enter your Message.</mat-error>
+            </mat-form-field>
+            <div class="w-100 d-flex pt-4">
+              <button class="app-primary-btn w-100" [disabled]="!contactUsForm.valid" type="submit" mat-button>
+                SUBMIT
+              </button>
+            </div>
+          </form>
+        </mat-card-content>
+      </mat-card>
+    </div>
+  </div>
+</div>
