Created checkout service

--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -33,6 +33,6 @@
   <mat-divider></mat-divider>
   <div class="row d-flex justify-content-between mt-3 pl-5 pr-5">
     <button mat-button class="app-link"><fa-icon [icon]="faLongArrowAltLeft"></fa-icon> Continue Shopping</button>
-    <button mat-button class="app-primary-btn">Checkout</button>
+    <button mat-button class="app-primary-btn" [routerLink]="['/checkout']">Checkout</button>
   </div>
 </section>
