--- a/src/app/admin/products/add-edit-product-dialog copy/add-edit-product.dialog.html
+++ b/src/app/admin/products/add-edit-product-dialog copy/add-edit-product.dialog.html
@@ -1,5 +1,5 @@
-<!--
-  @author Parth Parmar <parth.parmar@default.ca>
+<!-- 
+  @author Tapan Prajapati <Tapan.Prajapati@dal.ca> 
 -->
 <section class="container product-detail mt-5 mb-5">
   <div class="row">
