--- a/src/app/admin/products/products.component.html
+++ b/src/app/admin/products/products.component.html
@@ -1,3 +1,7 @@
+<!-- 
+  @author Tapan Prajapati <Tapan.Prajapati@dal.ca> 
+-->
+
 <div class="container-fluid mat-elevation-z8">
   <mat-tab-group mat-align-tabs="center">
     <mat-tab label="Products">
@@ -48,7 +52,7 @@
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Action</th>
             <td mat-cell *matCellDef="let product">
               <button mat-raised-button class="app-primary-btn" (click)="edit(product.id)">Edit</button>
-              <button mat-raised-button class="app-primary-btn" (click)="delete(product.id)">Delete</button>
+              <button mat-raised-button class="app-primary-btn" (click)="delete(product)">Delete</button>
             </td>
           </ng-container>
 
@@ -60,7 +64,7 @@
     </mat-tab>
     <mat-tab label="Categories">
       <div class="table-responsive d-flex flex-column mt-2">
-        <div class="row">
+        <div class="row text-center">
           <form class="col-lg-9 col-md-12" [formGroup]="CategoryFormGroup">
             <mat-form-field hidden>
               <input matInput type="number" [formControl]="id" />
