change in api call URL

--- a/src/app/orders/order-details/order-details.component.html
+++ b/src/app/orders/order-details/order-details.component.html
@@ -1,3 +1,7 @@
+<!-- /**
+ * @author Malav Jani <ml805403@dal.ca>
+ *
+ */ -->
 <section class="container mt-5 mb-5">
   <h1>Order Details</h1>
   <hr />
