--- a/src/app/orders/orders.component.html
+++ b/src/app/orders/orders.component.html
@@ -1,3 +1,7 @@
+<!-- /**
+ * @author Malav Jani <ml805403@dal.ca>
+ *
+ */ -->
 <section class="container-fluid orders mt-5 mb-5">
   <div class="row">
     <div class="col-md-4 mb-4">
