--- a/src/app/orders/order-details/order-details.component.scss
+++ b/src/app/orders/order-details/order-details.component.scss
@@ -1,3 +1,7 @@
+// /**
+//  * @author Malav Jani <ml805403@dal.ca>
+//  *
+//  */
 /* stylelint-disable */
 @import "base/colors";
 @import "abstract/placeholders";
