Change Node production API

--- a/src/app/admin/workers/workers.component.html
+++ b/src/app/admin/workers/workers.component.html
@@ -1,3 +1,5 @@
+<!-- @author Asmita Chaudhari <Asmita.Chaudhari@dal.ca> -->
+
 <div class="container-fluid">
   <div class="row mb-2">
     <h3>ADD USER</h3>
