--- a/src/app/admin/worker-delete-dialog/worker-delete-dialog.component.html
+++ b/src/app/admin/worker-delete-dialog/worker-delete-dialog.component.html
@@ -1,3 +1,5 @@
+<!-- @author Asmita Chaudhari <Asmita.Chaudhari@dal.ca> -->
+
 <h1 mat-dialog-title class="text-center">Remove User</h1>
 <mat-divider class="p-2"></mat-divider>
 
