Updated checkout service bug

--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,6 +1,4 @@
-<!-- /**
-* @author Samkit Shah <samkit@dal.ca>
-*/ -->
+<!-- @author Samkit Shah [samkit@dal.ca] -->
 <section class="container-fluid signup-container">
   <div class="row justify-content-center">
     <div fxHide.lt-md class="col-md-7">
@@ -113,7 +111,7 @@
               </mat-error>
             </mat-form-field>
 
-            <mat-form-field fxFlex.lt-sm="100%">
+            <mat-form-field>
               <mat-label>Role</mat-label>
               <mat-select [formControl]="role" [value]="roles[0].id" single required>
                 <mat-option *ngFor="let role of roles" [value]="role.id">{{ role.name }}</mat-option>
