--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -41,22 +41,6 @@
             </div>
           </div>
         </div>
-
-        <!-- <ul class="list-group mb-3">
-          <li
-            class="list-group-item d-flex justify-content-between lh-condensed"
-            *ngFor="let product of cartItems"
-          >
-            <div>
-              <img src="./../../assets/media/product-item.png" [alt]="product.name" width="150" height="100" />
-            </div>
-            <div>
-              <h6 class="my-0">{{ product.name }}</h6>
-              <p>Product Category : {{ product.categoryName }}</p>
-            </div>
-          </li>
-          <hr />
-        </ul> -->
       </mat-card>
     </div>
     <div class="col-md-5 col-sm-12 d-flex flex-column justify-content-center">
@@ -86,7 +70,7 @@
                 >BannerId is required.</mat-error
               >
               <mat-error *ngIf="!bannerId.hasError('required') && bannerId.hasError('pattern')"
-                >Enter valid Banner Id. eg.B00123456</mat-error
+                >Invalid BannerId.</mat-error
               >
             </mat-form-field>
             <mat-form-field class="w-100">
