Created backend service for reset password

--- a/src/app/forgot-password/forgot-password.component.html
+++ b/src/app/forgot-password/forgot-password.component.html
@@ -3,16 +3,16 @@
     <div *ngIf="!isResetPwdLinkSent">
       <h4 class="font-weight-bold">Reset Password</h4>
       <div class="secondary-txt mt-2 mb-2">
-        Enter your email and we'll send a link on your email to reset your password.
+        Enter your BannerId and we'll send a link on your email to reset your password.
       </div>
       <form class="app-form" [formGroup]="resetPasswordForm" (ngSubmit)="resetPasswordLink()">
         <mat-form-field class="w-100">
-          <input matInput type="text" placeholder="Email Address" [formControl]="email" autocomplete="off" />
-          <mat-error *ngIf="email.hasError('required') && !email.hasError('email')"
-            >Please enter email address.</mat-error
+          <input matInput type="text" placeholder="BannerId" [formControl]="bannerId" autocomplete="off" />
+          <mat-error *ngIf="bannerId.hasError('required') && !bannerId.hasError('pattern')"
+            >Please enter BannerId.</mat-error
           >
-          <mat-error *ngIf="!email.hasError('required') && email.hasError('email')"
-            >Please enter a valid email address.</mat-error
+          <mat-error *ngIf="!bannerId.hasError('required') && bannerId.hasError('pattern')"
+            >Please enter a valid BannerId.</mat-error
           >
         </mat-form-field>
         <div class="pt-2">
