changes in about module

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,6 +1,30 @@
-<section class="mt-5">
+<!-- <section class="mt-5">
   <h1>About Us</h1>
   <a [routerLink]="'our-team'">Our Team</a>
   <span>|</span>
   <a [routerLink]="'join'">Join as a Volunteer</a>
-</section>
+</section> -->
+
+<div class="container-fluid mt-4 mb-4">
+  <div class="row mt-2">
+    <h2>Welcome to Dalhouise Food Bank<mat-divider class="divider"></mat-divider></h2>
+
+    <p class="m-2">
+      This web application will help all the community members and especially students, by providing an easy way of
+      registering the items and picking it up at their convenience. Using this website, the student can save their time
+      by avoiding standing in a long queue to get their food. Moreover, the major goal of this application is to help
+      students to ask for the items they need regularly. Students will have all the new updates on the food bank and
+      would be able to give feedback. Considering the current scenario of such pandemic "DSU food bank" will help in
+      maintaining social distancing for students by scheduling proper pickup time for students
+    </p>
+  </div>
+  <div class="row">
+    <div class="col-md-6">
+      <h2>Over Vision</h2>
+      <mat-divider class="divider"></mat-divider>
+    </div>
+    <div class="col-md-6">
+      <h1>hello</h1>
+    </div>
+  </div>
+</div>
