--- a/src/app/about/our-team/our-team.component.html
+++ b/src/app/about/our-team/our-team.component.html
@@ -1,3 +1,38 @@
-<section class="mt-5">
+<div class="mt-3">
   <h1>Our Team</h1>
-</section>
+  <mat-divider class="divider"></mat-divider>
+  <div class="row">
+    <div class="col-md-12 col-sm-12 d-flex flex-column justify-content-center">
+      <div class="row">
+        <div class="mt-1 p-2 col-md-6">
+          <h4>Asmita Chaudhari</h4>
+          <p>Front-end developer</p>
+        </div>
+        <div class="mt-1 p-2 col-md-6">
+          <h4>Malav Jani</h4>
+          <p>Frorn-end developer</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="mt-1 p-2 col-md-6">
+          <h4>Parth Parmar</h4>
+          <p>Full stack developer</p>
+        </div>
+        <div class="mt-1 p-2 col-md-6">
+          <h4>Tapan Prajapati</h4>
+          <p>Back-end developer</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="mt-1 p-2 col-md-6">
+          <h4>Samkit Shah</h4>
+          <p>Full stack developer</p>
+        </div>
+        <div class="mt-1 p-2 col-md-6">
+          <h4>Siddharth Kapania</h4>
+          <p>Back-end developer</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
