User Profile API + No Cart items UI

--- a/src/app/@shared/header/header.component.html
+++ b/src/app/@shared/header/header.component.html
@@ -19,7 +19,7 @@
         routerLinkActive="mat-accent"
       >
         <span *ngIf="!item.isIcon">{{ item.name }}</span>
-        <fa-icon *ngIf="item.isIcon" [icon]="item.iconName"></fa-icon>
+        <mat-icon *ngIf="item.isIcon">{{ item.iconName }}</mat-icon>
       </button>
     </ng-container>
     <button mat-button *ngIf="isLoggedIn" (click)="logout()"><span>Logout</span></button>
