--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -8,6 +8,11 @@
 * {
   font-family: $font-montserrat-medium !important;
 }
+
+mat-icon {
+  font-family: "Material Icons" !important;
+}
+
 :focus {
   outline: unset !important;
 }
@@ -113,4 +118,8 @@ td.mat-cell {
 
 .mat-progress-spinner circle {
   stroke: #06061d;
+}
+
+.mat-badge-content {
+  background: $action-btn-orange !important;
 }
