about-us markup

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -5,13 +5,13 @@
       <mat-divider class="divider"></mat-divider>
       <p class="mt-3 mb-2">
         The application aims to eliminate the cumbersome manual processes followed by the staff members and volunteers
-        working with the DFB by providing a digital system to carry out their day-to-day activities.
+        working with the Dalhousie Food Bank by providing a digital system to carry out their day-to-day activities.
       </p>
       <app-our-team></app-our-team>
     </div>
     <div fxHide.lt-md class="col-md-5">
       <picture>
-        <img class="app-signup-img" alt="signup page image" src="./../../assets/media/about us.png" />
+        <img class="app-about-img" alt="signup page image" src="./../../assets/media/about us.png" />
       </picture>
     </div>
   </div>
