--- a/src/app/about/our-team/our-team.component.html
+++ b/src/app/about/our-team/our-team.component.html
@@ -1,38 +1,34 @@
 <div class="mt-3">
   <h1>Our Team</h1>
   <mat-divider class="divider"></mat-divider>
-  <div class="row">
-    <div class="col-md-12 col-sm-12 d-flex flex-column justify-content-center">
-      <div class="row">
-        <div class="mt-1 p-2 col-md-6">
-          <h4>Asmita Chaudhari</h4>
-          <p>Front-end developer</p>
-        </div>
-        <div class="mt-1 p-2 col-md-6">
-          <h4>Malav Jani</h4>
-          <p>Frorn-end developer</p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="mt-1 p-2 col-md-6">
-          <h4>Parth Parmar</h4>
-          <p>Full stack developer</p>
-        </div>
-        <div class="mt-1 p-2 col-md-6">
-          <h4>Tapan Prajapati</h4>
-          <p>Back-end developer</p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="mt-1 p-2 col-md-6">
-          <h4>Samkit Shah</h4>
-          <p>Full stack developer</p>
-        </div>
-        <div class="mt-1 p-2 col-md-6">
-          <h4>Siddharth Kapania</h4>
-          <p>Back-end developer</p>
-        </div>
-      </div>
+  <div class="row p-2">
+    <div class="mt-1 p-2 col-md-6">
+      <h6>Asmita Chaudhari</h6>
+      <small>Front-end Engineer</small>
+    </div>
+    <div class="mt-1 p-2 col-md-6">
+      <h6>Malav Jani</h6>
+      <small>Front-end Engineer</small>
+    </div>
+  </div>
+  <div class="row p-2">
+    <div class="mt-1 p-2 col-md-6">
+      <h6>Parth Parmar</h6>
+      <small>Full Stack Engineer</small>
+    </div>
+    <div class="mt-1 p-2 col-md-6">
+      <h6>Samkit Shah</h6>
+      <small>Full Stack Engineer</small>
+    </div>
+  </div>
+  <div class="row p-2">
+    <div class="mt-1 p-2 col-md-6">
+      <h6>Siddharth Kapania</h6>
+      <small>Back-end Engineer</small>
+    </div>
+    <div class="mt-1 p-2 col-md-6">
+      <h6>Tapan Prajapati</h6>
+      <small>Back-end Engineer</small>
     </div>
   </div>
 </div>
